syntax = "proto2";
option java_package = "pl.agh.ds.currencystream";

message Currency {
    required string code = 1;
    optional float value = 2;
}

message CurrencyValue {
    required float value = 1;
}

message CurrencyList {
    repeated Currency currencies = 1;
}

message AvailableCurrenciesRequest {}

service CurrencyService {
    rpc GetCurrencyValues(Currency) returns (stream CurrencyValue) {}
    rpc GetAvailableCurrencies(AvailableCurrenciesRequest) returns (CurrencyList) {}
}
